Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.35
* Fixed uninitialized value warnings when cached template enabled (Chris T)
* Fixed error in logs about failed login during initial login (Chris T, 858)
* Updated gnome2 stylesheet (Pongracz I)
* Updated Hungarian translation (Pongracz I)
* Fixed is_zero error on inventory activity report (Chris T)


Changelog for 1.3.34
* Fixed some SQL syntax issues on using overpayments (Chris T)
* Fixed date range when clicking through income statement to gl (Chris T, 836)
* Fixed invoice screens not recognizing default payment account (Chris T, 837)
* Fixed gl report criteria lost when returning from transaction (Chris T, 839)
* Fixed incorrect payment account info in invoice screen (Chris T)
* Fixed on-hold handling for ar transactions (Herman V)
* Fixed address handling rendering issues on invoices (Chris T)
* Fixed error handling after state had been cleared (Herman V)
* Updates to SQL-Ledger 2.8 migration script (Chris T)
* Fixed income account tracking on assemblies screen (Erik H)
* Fixed trouble emailing recurring transactions (873, Erik H)
* Fixed saving company saving incorrectly to DB (886, John L)
* Can now search for batches/drafts without specifying a class (Erik H)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Herman V is Herman Vierendeels
John L is John Locke


Changelog for 1.3.33
* Fixed <?lsmb YYMMMDD ?> interpolation in settings (Chris T)
* Fixed Department dropdown ordering and selection (Chris T, 810)
* Fixed Project dropdown ordering and selection (Chris T, 809)
* Fixed UI inconsistency re: language dropdown (Chris T, 816)
* Fixed grants to menus (which can cause problems for submenus (Chris T, 820)
* Fixed tax boxes cannot be all unset (Chris T, 818)
* Project, serial number, and notes now appear initially (Chris T, 824)
* Fixed double-counting first date's balance on gl report (Chris T)
* Fixed user creation failing on some timezones with some datestyles (Chris T)